--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "luxspace-rfd",
+  "name": "luxspace",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.4.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "dotenv": "^11.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "react-scripts": "^5.0.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -38,7 +40,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.2",
     "craco": "^0.0.3",
-    "postcss": "^8.4.5",
-    "tailwindcss": "^3.0.13"
+    "postcss": "^5.0.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
 }
