--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^11.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "web-vitals": "^2.1.2"
   },
@@ -39,7 +40,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
-    "craco": "^0.0.3",
+    "@tailwindcss/postcss7-compat": "^2.0.4",
     "postcss": "^5.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   }
